--- a/100.html
+++ b/100.html
@@ -44,18 +44,19 @@
   </head>
   <body>
     <div class="box" style="text-align: center">
-      <h1>生日快乐</h1>
+      <h1 style="padding: 10px 20px">生日快乐</h1>
       <img
         src="https://photoos.mac89.com/180702/JPG-180702_304/IAcaVp73Sv_small.jpg"
-        style="height: 200px"
+        style="padding: 10px 20px; height: 200px"
       />
-      <p>
+      <p style="padding: 10px 20px">
         愿你时时刻刻有快乐相伴，分分秒秒与好运缠绵，日日夜夜与安康为伴，年年岁岁有幸福开颜，朝朝暮暮有如意携腕;祝生日快乐!
       </p>
       <img
-        src="https://img95.699pic.com/photo/40151/9303.gif_wh300.gif!/fh/300" style="height: 200px"
+        src="https://img95.699pic.com/photo/40151/9303.gif_wh300.gif!/fh/300"
+        style="height: 200px; padding: 10px 20px"
       />
-        
+
       />
     </div>
   </body>
