--- a/100.html
+++ b/100.html
@@ -55,9 +55,10 @@
       <img
         src="https://img95.699pic.com/photo/40151/9303.gif_wh300.gif!/fh/300"
         style="height: 200px; padding: 10px 20px"
-      />
-
-      />
+      /><div style="padding: 10px 20px">
+      <p style="text-align: right">陈金坷</p>
+      <p style="text-align: right">2022年12月31日</p>
+      </div>
     </div>
   </body>
 </html>
